# zinoClaw

./: .gitignore  BUILD.md  Dockerfile  Dockerfile.openclaw  docker-compose-happy-1panel.yml  docker-compose-webtop-1panel.yml  docker-compose-webtop-deskclaw.yml  init.sh  selkies-install.sh  selkies_add_nginx_sec.sh
nodeskclaw-artifacts/: README.md  (+1 more)
nodeskclaw-artifacts/nanobot-image/deskclaw-resources/gateway/: agent.py  asset_registry.py  docs_faq.py  exec_path.py  exec_tool_patch.py  mcp_server.py  media.py  models.py  pyproject.toml  server.py  text_file_patch.py
nodeskclaw-artifacts/nanobot-image/deskclaw-resources/gateway/extensions/: agent_hook.py  loader.py  memory_patch.py
nodeskclaw-artifacts/nanobot-image/deskclaw-resources/gateway/mcp_tools/: __init__.py  docs.py  gateway.py  loop_guard.py  mcp_config.py
nodeskclaw-artifacts/nanobot-image/deskclaw-resources/gateway/perf/: agent.py  channels.py
nodeskclaw-artifacts/nanobot-image/deskclaw-resources/gateway/security/: __init__.py  layer.py
nodeskclaw-artifacts/nanobot-image/deskclaw-resources/gateway/security/builtin_plugins/: interactive_approval.py  loop_guard.py
nodeskclaw-artifacts/nanobot-image/deskclaw-resources/gateway/security/sandbox/: executor.py  runtime.py  tool_proxy.py
nodeskclaw-artifacts/nanobot-image/deskclaw-resources/gateway/security/tool_layer/: plugin_loader.py  policy_ops.py  registry_patch.py
nodeskclaw-artifacts/nanobot-image/deskclaw-resources/gateway/telemetry/: config.py  reporter.py
nodeskclaw-artifacts/nanobot-image/deskclaw-resources/gateway/tests/: test_security_layer_pipeline.py
nodeskclaw-artifacts/nanobot-image/nodeskclaw-tunnel-bridge/: README.md  pyproject.toml
nodeskclaw-artifacts/nanobot-image/nodeskclaw-tunnel-bridge/src/nodeskclaw_tunnel_bridge/: __init__.py  __main__.py  client.py  nanobot_channel.py
(+428 files in other folders)
