[project]
name = "nodeskclaw-tunnel-bridge"
version = "0.1.0"
description = "NoDeskClaw tunnel bridge for NanoBot runtime"
requires-python = ">=3.11"
dependencies = ["websockets>=12.0", "httpx>=0.27"]

[project.entry-points."nanobot.channels"]
nodeskclaw = "nodeskclaw_tunnel_bridge.nanobot_channel:NoDeskClawChannel"

[project.scripts]
nodeskclaw-tunnel-bridge = "nodeskclaw_tunnel_bridge.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
