[project]
name = "deskclaw-gateway"
version = "0.1.0"
description = "DeskClaw Gateway Adapter - bridges Shell UI to nanobot kernel"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "websockets>=14.0",
    "nanobot-ai",
    # Bundled channel dependencies — same idea as wecom SDK: ship what channels need in gateway-venv
    "wecom-aibot-sdk-python>=0.1.5",
    # Personal WeChat (built-in weixin / ilink): equals nanobot-ai optional extra [weixin] (no separate plugin wheel)
    "qrcode[pil]>=8.0",
    "pycryptodome>=3.20.0",
    # Windows-only: required by MCP server for Win32 API access
    "pywin32>=306; sys_platform == 'win32'",
]

[project.scripts]
deskclaw-gateway = "gateway.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gateway"]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".."]
